# rag-langchain

./: pyproject.toml
notebook/: document.ipynb  pdfloader.ipynb
notebook/data/text_files/: python_intro.txt
